--- a/views/login/login.html
+++ b/views/login/login.html
@@ -89,7 +89,7 @@
   </div>
 
   <div class="login_overseas clearfix">
-    <div style="margin: 0px auto;height: 550px;width: 100%;background: url({{helper.cdnhost}}/assets/img/login_background1.png) no-repeat;background-size: cover;background-position-x: -200px;">{##} {#
+    <div style="margin: 0px auto;height: 550px;width: 100%;background: url({{helper.cdnhost}}/assets/img/banner_guwen.jpg) no-repeat;background-size: cover;background-position-x: -200px;">{##} {#
       <img src="{{helper.cdnhost}}/assets/img/login_background1.png" alt="" style="width: 100%;height: 550px;display:block;overflow:hidden;"
       /> #}
     </div>
