--- a/views/widget/new_slide/new_slide.css
+++ b/views/widget/new_slide/new_slide.css
@@ -27,7 +27,7 @@
 .bold{font-weight:bold;} .f11{ font-size:11px;} .f14{ font-size:14px;}
 .tl {text-align:left;}.tc {text-align:center;} .tr, .a-right{text-align:right;} .nowrap,.nobr{white-space:nowrap; word-wrap:normal;}
 /* quick_links */
-.quick_links_wrap,.mui-mbar-tabs{ width:40px; position:fixed;left:4px;bottom:0; z-index:1000;-webkit-transition:width linear .4s; -moz-transition:width linear .4s; -ms-transition:width linear .4s; transition:width linear .4s; _position:fixed; _bottom:auto; _top:expression(documentElement.scrollTop+documentElement.clientHeight-this.offsetHeight-10);}
+.quick_links_wrap,.mui-mbar-tabs{ width:40px; position:fixed;right:4px;bottom:0; z-index:1000;-webkit-transition:width linear .4s; -moz-transition:width linear .4s; -ms-transition:width linear .4s; transition:width linear .4s; _position:fixed; _bottom:auto; _top:expression(documentElement.scrollTop+documentElement.clientHeight-this.offsetHeight-10);}
 .quick_links_wraper.quick_links_dockright{ margin-left:0; left:auto; right:4px;}
 .mui-mbar-tabs i,.ibar_closebtn,.login_order,.login_favorite{display: inline-block;cursor: pointer;height: 19px;width: 18px;vertical-align: top;position:absolute;}
 #quick_links_panel{
@@ -635,7 +635,7 @@ i.ibar_recharge-arrow {
   background:#C13232;
   position: fixed;
   top:344px;
-  left: 47px;
+  /* left: 47px; */
 }
 #quick_links_pop .ibar_closebtn{
   color: #ffffff;
@@ -684,10 +684,10 @@ i.ibar_recharge-arrow {
   border-top:14px solid #f8f8f8;
   border-bottom:14px solid #f8f8f8;
   background: #ffffff;
-  /* right:44px; */
+  right:44px;
   top:-184px;
   display: none;
-  left: 44px;
+  /* left: 44px; */
 }
 .weixin-slide-img img{
   width: 226px;
@@ -698,10 +698,10 @@ i.ibar_recharge-arrow {
   height:296px;
   border:12px solid #f8f8f8;
   background: #ffffff;
-  /* right:44px; */
+  right:44px;
   top:-230px;
   display: none;
-  left: 44px;
+  /* left: 44px; */
 }
 .qq-slide-img img{
   width: 216px;
@@ -727,7 +727,7 @@ i.ibar_recharge-arrow {
   font-size: 16px;
   text-align: center;
   line-height: 44px;
-  left:44px;
+  right:44px;
   top:0;
   display: none;
 }
