--- a/views/widget/new_slide/new_slide2.html
+++ b/views/widget/new_slide/new_slide2.html
@@ -17,7 +17,7 @@
             <img src="{{helper.cdnhost}}/assets/img/yijian.png" alt="在线评估" class="quick-img">
             <span>在<br>线<br>评<br>估</span>
             <div id="comment_con"
-                 style="width: 280px;background: #fff;left:44px;top: -120px;position: absolute;border: 1px solid #dcdcdc;display: none;">
+                 style="width: 280px;background: #fff;right:44px;top: -120px;position: absolute;border: 1px solid #dcdcdc;display: none;">
               <div id="comment_close" style="font-size: 15px;cursor: pointer;color:#333333;">x</div>
               {% import '../online_evaluation/online_evaluation.html' as online_evaluation%}
               {{ online_evaluation.online_evaluation(path) }}
