--- a/views/widget2/active_popup/active_popup.css
+++ b/views/widget2/active_popup/active_popup.css
@@ -125,10 +125,13 @@
         height:30px;
         background:url(../../assets/img/popup_x_b1.png) no-repeat 0 0;
         background-size: 30px 30px;
-        position:absolute;
+        /* position:absolute;
         right: 10px;
-        top: 25%;
+        top: 25%; */
         cursor: pointer;
+        float: left;
+        margin-top: -50px;
+        margin-left: -30px;
     }
     .act-pop-left{
         position: fixed;
