--- a/views/about/group.html
+++ b/views/about/group.html
@@ -45,6 +45,7 @@
         <h1>各类排名及优势介绍</h1>
         <div class="sort-container clearfix">
           <div class="sort-left wow fadeInLeft" data-wow-delay=".1s">
+              <div>{{schooltopic.list.advantage_title}}</div>
             <img src="{{schooltopic.list.advantage_map}}" alt="" style="height:524px;width:600px;">
           </div>
           <div class="sort-right wow fadeInRight" data-wow-delay=".3s">
