修改集团模板

--- a/views/about/group.html
+++ b/views/about/group.html
@@ -43,9 +43,9 @@
     <div class="jt-super">
       <div class="jieshao-item">
         <h1>各类排名及优势介绍</h1>
-        <div class="sort-container clearfix">
-          <div class="sort-left wow fadeInLeft" data-wow-delay=".1s">
-              <div>{{schooltopic.list.advantage_title}}</div>
+        <div class="sort-container clearfix" style="position: relative;">
+          <div style="height:524px;width:600px;color: #fff;font-size: 42px;position: absolute;top: 0px;z-index: 1;text-align: center;line-height: 42px;padding: 200px 0px;">各类排名及优势介绍是各类排名及优势介绍是各类排名及优势介绍是</div>{#{{schooltopic.list.advantage_title}}#}
+          <div class="sort-left wow fadeInLeft" data-wow-delay=".1s" >
             <img src="{{schooltopic.list.advantage_map}}" alt="" style="height:524px;width:600px;">
           </div>
           <div class="sort-right wow fadeInRight" data-wow-delay=".3s">
