--- a/public/assets/css/special_page.css
+++ b/public/assets/css/special_page.css
@@ -348,8 +348,8 @@ ul {
 	padding: 52px 0 0 152px;
 	width: 100%;
 	height: 460px;
-  /* background: url() no-repeat; */
-  background:#ccc;
+  background: url(../img/about/group_01.png) no-repeat;
+  /* background:#ccc; */
 	background-size: cover;
 }
 
