修改图片名

--- a/views/about/contact.html
+++ b/views/about/contact.html
@@ -17,7 +17,7 @@ width:50px;}
 .checkRadio{display:inline-block;font-size:0;}
 .checkRadio label{position:relative;display:inline-block;margin-right:20px;width:90px;height:24px;border:solid 1px #dcdcdc;border-radius:4px;color:#666;text-align:center;font-size:14px;line-height:24px;}
 .checkRadio input[type="radio"]+i{position:absolute;top:0;right:0;bottom:0;left:0;border:transparent;border-radius:4px;}
-.checkRadio input[type="radio"]:checked+i{border:solid 1px #c13232;background:url({{helper.cdnhost}}/assets/img/arrow.png) no-repeat right top;}
+.checkRadio input[type="radio"]:checked+i{border:solid 1px #c13232;background:url({{helper.cdnhost}}/assets/img/arrow_1.png) no-repeat right top;}
 .checkRadio .checked{color:#C13232;}
 .checkRadio input[type=radio]{ opacity: 0;filter:alpha(opacity=0);position: absolute;}
 .selectControl{width:200px;height:24px;border:solid 1px #dcdcdc;background: url({{helper.cdnhost}}/assets/img/feedback.png) no-repeat right 5px center;color: #666; border-radius:4px;text-indent:10px;}
