修改首席顾问为推荐顾问

--- a/views/widget2/community_advisor/community_advisor.html
+++ b/views/widget2/community_advisor/community_advisor.html
@@ -77,7 +77,7 @@
   })
 </script>
 {% endmacro %}
-<!-- 首席顾问 -->
+<!-- 推荐顾问 -->
 {% macro chief_advisor(advisor, helper,login_info, index) %}
 <div class="community-advisor dui-box-shadow">
   <ul style="height: 40px">
