--- a/views/widget/new_slide/new_slide2.html
+++ b/views/widget/new_slide/new_slide2.html
@@ -7,7 +7,10 @@
 
       <div class="quick_links_panel">
         <ul>
-          <li style="height: 118px;padding:0;position: relative;display: none" class="jiang"><img src="{{helper.cdnhost}}/assets/img/jiang.gif" alt="" style="max-width: none;position: absolute;left:50%;margin-left: -22px;"></li>
+          <li style="height: 44px;padding:0;position: relative;" class="jiang">
+            <img src="{{helper.cdnhost}}/assets/img/liuxuejisuanqi.gif" alt="" style="max-width: none;position: absolute;left:50%;margin-left: -22px;">
+            <div id="jisuanqi" style="background: url({{helper.cdnhost}}/assets/img/liuxuejisuanqi_01.png);width: 114px;height: 44px;position: absolute;left: 50%;margin-left: -137px;font-size: 16px;text-align: center;color: #fff;line-height: 44px;display: none;">留学计算器</div>
+          </li>
           <li class="on zixun message_list current" id="zxzx" style="background: #c13232;cursor: default;">
 
             <img src="{{helper.cdnhost}}/assets/img/phone.gif" alt="立即咨询" class="quick-img" style="width: 26px;">
