修改新闻列表

--- a/views/news.html
+++ b/views/news.html
@@ -6,15 +6,21 @@
   <link rel="stylesheet" type="text/css" href="{{helper.cdnhost}}/assets/css/draft.css" >
   <style type="text/css">
     .banner {
-        width:100%;background:url("{{helper.cdnhost}}/assets/img/xwjhy_01.jpg") no-repeat center center;
+        width:100%;
+        background:url("{{helper.cdnhost}}/assets/img/xwjhy_01.jpg") no-repeat center center;
         height: 276px;
         overflow:hidden;
         position: relative;
     }
+    .floor {
+        width: 1000px;
+        height: 300px;
+        background: #fff;
+        margin: 0 auto;
+    }
     .floor-2 {
-        width:100%;
-        background:url("{{helper.cdnhost}}/assets/img/xwjhy_02.jpg") no-repeat center center;
-        height:275px;
+        width: 100%;
+        height: 300px;
         position: relative;
         margin-top: 25px;
     }
@@ -82,46 +88,13 @@
         background:url({{helper.cdnhost}}/assets/img/tencent.png) no-repeat 0 0;
         background-size: 32px 32px;
     }
-    .floor-3 {
-        width:100%;
-        background:url("{{helper.cdnhost}}/assets/img/xwjhy_03.jpg") no-repeat center center;
-        height:301px;
-        position: relative;
-    }
-    .floor-4 {
-        width:100%;
-        background:url("{{helper.cdnhost}}/assets/img/xwjhy_04.jpg") no-repeat center center;
-        height:300px;
-        position: relative;
-    }
-    .floor-5 {
-        width:100%;
-        background:url("{{helper.cdnhost}}/assets/img/xwjhy_05.jpg") no-repeat center center;
-        height:300px;
-        position: relative;
-        margin-bottom: 120px;
-    }
-    .floor-6 {
-        width:100%;
-        background:url("{{helper.cdnhost}}/assets/img/xwjhy_06.jpg") no-repeat center center;
-        height:300px;
-        position: relative;
-        margin-top: 58px;
-    }
-    .floor-7 {
-        width:100%;
-        background:url("{{helper.cdnhost}}/assets/img/xwjhy_07.jpg") no-repeat center center;
-        height:300px;
-        position: relative;
-        margin-top: 25px;
-    }
     .floorimg {
         width: 380px;
         height: 300px;
         border: 1px solid #000;
         position: absolute;
         top: 0px;
-        left: 8.5%;
+        left: 14.8%;
     }
     .floorimg img {
         width: 100%;
@@ -129,29 +102,30 @@
     }
     .floortitle {
         width: 545px;
-        line-height: 30px;
-        font-size: 25px;
-        color: #000;
+        line-height: 36px;
+        font-size: 24px;
+        color: #333;
         font-weight: bold;
         position: absolute;
         top: 40px;
-        left: 44%;
+        left: 44.5%;
     }
     .floortime {
-        font-size: 13px;
-        color: #666;
+        font-size: 12px;
+        line-height: 26px;
+        color: #999;
         position: absolute;
         top: 108px;
-        left: 44%;
+        left: 44.5%;
     }
     .floordes {
         width: 530px;
         line-height: 25px;
         font-size: 14px;
-        color: #666;
+        color: #999;
         position: absolute;
         top: 140px;
-        left: 44%;
+        left: 44.5%;
     }
   </style>
 </head>
@@ -164,8 +138,9 @@
 <!-- banner图 -->
 <div class="banner">
 </div>
-<div class="clearfix" id="main_con" data-page="1" data-page-all="">
-<div class="floor-6">
+<div class="clearfix" id="main_con" data-page="1" data-page-all="2">
+<div class="floor-2">
+    <div class="floor"></div>
     <div class="floorimg">
         <img src="" alt="">
     </div>
@@ -183,7 +158,14 @@
         <a class="floor-icon-btn floor-sohu-btn" href="//learning.sohu.com/20181219/n558686026.shtml"></a>
     </div>
 </div>
-<div class="floor-7">
+<div class="floor-2">
+    <div class="floor"></div>
+    <div class="floorimg">
+        <img src="" alt="">
+    </div>
+    <div class="floortitle">改革开放前40周年中国留学教育与留学人才研讨会在京召开</div>
+    <div class="floortime">金吉列留学资讯 <span>2018-12-19</span></div>
+    <div class="floordes">改革开放前40周年中国留学教育与留学人才研讨会在京召开改革开放前40周年中国留学教育与留学人才研讨会在京召开改革开放前40周年中国留学教育与留学人才研讨会在京召开</div>
     <div class="floor-btn-box">
         <a class="floor-detail-btn" href="//www.jjl.cn/zt/2018/20181114_aus/index.html">查看详情</a>
         <a class="floor-icon-btn floor-sina-btn" href="//edu.sina.com.cn/a/2018-11-09/doc-ihmutuea8588299.shtml"></a>
@@ -192,6 +174,13 @@
     </div>
 </div>
 <div class="floor-2">
+    <div class="floor"></div>
+    <div class="floorimg">
+        <img src="" alt="">
+    </div>
+    <div class="floortitle">改革开放前40周年中国留学教育与留学人才研讨会在京召开</div>
+    <div class="floortime">金吉列留学资讯 <span>2018-12-19</span></div>
+    <div class="floordes">改革开放前40周年中国留学教育与留学人才研讨会在京召开改革开放前40周年中国留学教育与留学人才研讨会在京召开改革开放前40周年中国留学教育与留学人才研讨会在京召开</div>
     <div class="floor-btn-box">
         <a class="floor-detail-btn" href="//www.jjl.cn/zt/2018/20180716_nz/index.html">查看详情</a>
         <a class="floor-icon-btn floor-sina-btn" href="//edu.sina.com.cn/a/2018-07-17/doc-ihfkffam4710203.shtml"></a>
@@ -199,12 +188,26 @@
         <a class="floor-icon-btn floor-sohu-btn" href="//learning.sohu.com/20180723/n544238648.shtml"></a>
     </div>
 </div>
-<div class="floor-3">
+<div class="floor-2">
+    <div class="floor"></div>
+    <div class="floorimg">
+        <img src="" alt="">
+    </div>
+    <div class="floortitle">改革开放前40周年中国留学教育与留学人才研讨会在京召开</div>
+    <div class="floortime">金吉列留学资讯 <span>2018-12-19</span></div>
+    <div class="floordes">改革开放前40周年中国留学教育与留学人才研讨会在京召开改革开放前40周年中国留学教育与留学人才研讨会在京召开改革开放前40周年中国留学教育与留学人才研讨会在京召开</div>
     <div class="floor-btn-box">
         <a class="floor-detail-btn" href="//www.jjl.cn/zt/2018/20181119/index.html">查看详情</a>
     </div>
 </div>
-<div class="floor-4">
+<div class="floor-2">
+    <div class="floor"></div>
+    <div class="floorimg">
+        <img src="" alt="">
+    </div>
+    <div class="floortitle">改革开放前40周年中国留学教育与留学人才研讨会在京召开</div>
+    <div class="floortime">金吉列留学资讯 <span>2018-12-19</span></div>
+    <div class="floordes">改革开放前40周年中国留学教育与留学人才研讨会在京召开改革开放前40周年中国留学教育与留学人才研讨会在京召开改革开放前40周年中国留学教育与留学人才研讨会在京召开</div>
     <div class="floor-btn-box">
         <a class="floor-detail-btn" href="//www.jjl.cn/zt/2018/20180926_belarus/index.html">查看详情</a>
         <a class="floor-icon-btn floor-sina-btn" href="//edu.sina.com.cn/a/2018-08-27/doc-ihifuvph7835443.shtml"></a>
@@ -212,14 +215,21 @@
         <a class="floor-icon-btn floor-sohu-btn" href="//learning.sohu.com/20180827/n547632932.shtml"></a>
     </div>
 </div>
-<div class="floor-5">
+<div class="floor-2" style="margin-bottom: 120px;">
+    <div class="floor"></div>
+    <div class="floorimg">
+        <img src="" alt="">
+    </div>
+    <div class="floortitle">改革开放前40周年中国留学教育与留学人才研讨会在京召开</div>
+    <div class="floortime">金吉列留学资讯 <span>2018-12-19</span></div>
+    <div class="floordes">改革开放前40周年中国留学教育与留学人才研讨会在京召开改革开放前40周年中国留学教育与留学人才研讨会在京召开改革开放前40周年中国留学教育与留学人才研讨会在京召开</div>
     <div class="floor-btn-box">
         <a class="floor-detail-btn" href="//www.jjl.cn/zt/2018/2018_qz/default.shtml">查看详情</a>
         <a class="floor-icon-btn floor-weixin-btn" href="//mp.weixin.qq.com/s/Fo_6NAdKQ9HS8gi2pxLveQ"></a>
     </div>
 </div>
 </div>
-
+<div class="dui-layout-lg guwen_more clearfix" style="display: block;margin-top: -80px;text-align: center;"><img src="{{helper.cdnhost}}/assets/img/loading-2.gif" alt=""><span>加载更多</span></div>
 {% import "widget/new_slide/new_slide.html" as  slide %}
 {{slide.leyu_slide("XC_"+tdk.pagekey+"_SEAT10",helper) }}
 {% include "widget/new_footer/common_footer.html" %}
@@ -236,4 +246,85 @@
 <script src="{{helper.cdnhost}}/assets/js/footer.js"></script>
 <script src="{{helper.cdnhost}}/dep/js/publicParamSubOrther.js"></script>
 </body>
+<script>
+var loadMoreFlag = true;
+var page
+$(document).ready(function (){
+  page = $('#main_con').data('page') + 1;
+  $(window).on('scroll', function () {
+    var $scroll = $(window).scrollTop();
+    // var con = document.getElementById('main_con').offsetHeight;
+    var doc = $(document).height()
+    var win = $(window).height()
+    if ($scroll >= (doc - win) - 500) {
+      if (loadMoreFlag) {
+        loadMoreFlag = false;
+        $('.guwen_more').show();
+        setTimeout(chiefmore, 2000);
+      }
+    }
+  });
+})
+function chiefmore () {
+  var login_ss = {};
+  if(cookie('login_ss') != undefined){
+    login_ss = JSON.parse(cookie('login_ss'));
+  } else {
+    login_ss.uid = 0;
+  }
+  // var page = $('#main_con').data('page') + 1;
+  var pageall = $('#main_con').data('page-all');
+  console.log('totalpage',pageall)
+//   var countryid = $('.focus-on').parent().attr('data-id');
+  console.log('page',page)
+  if(pageall == 1 || pageall < page ){
+    $('.guwen_more').hide();
+    return false;
+  }
+  var per_page = 20;
+  var area = cookie('currentarea');
+  // console.log('area',area)
+  // var thisObj = $(this);
+  $.ajax({
+    url: '/soapi/chiefmore',
+    type: 'GET',
+    datatype: 'json',
+    data: {
+    //   "uid": login_ss.uid,
+    //   "cityid": area, 
+    //   "page": page, 
+    //   "per_page": 6,
+    //   "countryid": countryid
+    },
+    success: function (msg) {
+      if (msg.data.list == null){
+        $('.guwen_more').hide();
+        loadMoreFlag = false;
+      } else if (msg.data.list.length <= 20) {
+        $('.guwen_more').hide();
+        loadMoreFlag = true;
+        // $('#main_con').data('page', page)
+        page ++;
+        console.log('page',page)
+        // console.log(msg);
+        var mainhtml = ''
+        for (var i = 0; i < msg.data.list.length;i++) {
+          mainhtml += '<div class="floor-2" id="main_add">';
+          mainhtml += additem(msg.data.list[i]);
+          mainhtml += '</div>';
+        }
+        mainhtml += '</div>';
+        $('#main_con').append($(mainhtml));
+      } else {
+        $('.guwen_more').hide();
+        loadMoreFlag = false;
+      }
+    },
+    error: function (XMLHttpRequest, textStatus, errorThrown) {
+      console.log(errorThrown)
+    }
+  })
+}
+</script>
+
 </html>
