修改大事记标尺

--- a/views/widget/new_slide/events_slide.html
+++ b/views/widget/new_slide/events_slide.html
@@ -6,7 +6,7 @@
 .eve-mbar-tabs, .eve_links_dockright{
     width: 75px;
     position: fixed;
-    right: 115px;
+    right: 8.5%;
     bottom: 0;
     z-index: 1000;
     -webkit-transition: width linear .4s;
