修改大事记标尺

--- a/views/widget/new_slide/events_slide.html
+++ b/views/widget/new_slide/events_slide.html
@@ -66,7 +66,7 @@
   }
 </style>
 <div class="mui-mbar-tabs eve-mbar-tabs" style="z-index:997;display: none;">
-  <div class="eve_links_dockright"  style="top: 200px;">
+  <div class="eve_links_dockright"  style="top: 200px;right: 9%;">
     <div class="quick_link_mian">
 
       <div class="eve_links_panel">
