修改大事记标尺

--- a/views/widget/new_slide/events_slide.html
+++ b/views/widget/new_slide/events_slide.html
@@ -4,16 +4,16 @@
 {% macro events_slide(memorabilia_list,helper) %}
 <style>
 .eve-mbar-tabs, .eve_links_dockright{
-    width: 75px;
+    width: 150px;
     position: fixed;
-    right: 10%;
+    right: 44px;
     bottom: 0;
     z-index: 1000;
     -webkit-transition: width linear .4s;
     transition: width linear .4s;
   }
   .eve_links_panel ul li{
-    width: 75px;
+    width: 150px;
     height: 25px;
     display: block;
     background: none;
@@ -66,7 +66,7 @@
   }
 </style>
 <div class="mui-mbar-tabs eve-mbar-tabs" style="z-index:997;display: none;">
-  <div class="eve_links_dockright"  style="top: 200px;right: 10%;">
+  <div class="eve_links_dockright"  style="top: 200px;">
     <div class="quick_link_mian">
 
       <div class="eve_links_panel">
