--- a/views/news.html
+++ b/views/news.html
@@ -128,6 +128,7 @@
         position: absolute;
         top: 140px;
         left: 40.5%;
+        overflow: hidden;text-overflow: ellipsis;display:-webkit-box;-webkit-box-orient:vertical;-webkit-line-clamp:3;
     }
   </style>
 </head>
