--- a/views/header_new.html
+++ b/views/header_new.html
@@ -36,4 +36,12 @@
     //custom page code begin here
     //custom page code end here	
     gio('send');
+  </script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-133228192-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+   
+    gtag('config', 'UA-133228192-1');
   </script> 
