--- a/views/widget/new_slide/events_new_slide.html
+++ b/views/widget/new_slide/events_new_slide.html
@@ -7,10 +7,10 @@
 
       <div class="quick_links_panel">
         <ul>
-          <!-- <li style="height: 44px;padding:0;position: relative;" class="jiang">
+          <li style="height: 44px;padding:0;position: relative;" class="jiang">
             <img src="{{helper.cdnhost}}/assets/img/liuxuejisuanqi.gif" alt="" style="max-width: none;position: absolute;left:50%;margin-left: -22px;">
             <div id="jisuanqi" style="background: url({{helper.cdnhost}}/assets/img/liuxuejisuanqi_01.png);width: 114px;height: 44px;position: absolute;left: 50%;margin-left: -137px;font-size: 16px;text-align: center;color: #fff;line-height: 44px;display: none;">留学计算器</div>
-          </li> -->
+          </li>
           <li class="on zixun message_list current" id="zxzx" style="background: #c13232;">
             <img src="{{helper.cdnhost}}/assets/img/phone.gif" alt="立即咨询" class="quick-img" style="width: 26px;">
             <span>立<br>即<br>咨<br>询</span>
